스프린트 5기 위클리 미션 (2주차) 수정 - 컨텐츠 내 이미지 width 값 변경

--- a/week2/static/css/main.css
+++ b/week2/static/css/main.css
@@ -188,6 +188,7 @@ header {
 }
 
 .content-04-img .popup {
+    width: 26rem;
     position: absolute;
     top: 7rem; /* 112px; */
     left: 4.8125rem; /* 77px; */
