--- a/Linkbrary/style.css
+++ b/Linkbrary/style.css
@@ -704,7 +704,9 @@ section {
 
 .small-side {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 10px;
   margin: 0;
   padding: 0;
