refactor : Remove unnecessary id search-link in style.css

--- a/Linkbrary/style.css
+++ b/Linkbrary/style.css
@@ -414,6 +414,7 @@ section {
 }
 
 .incorrect-password {
+  position: absolute;
   color: var(--red-color);
   margin-top: 6px;
 }
@@ -685,10 +686,6 @@ section {
   line-height: 15px; /* 115.385% */
 }
 
-.small-card {
-  width: 100px;
-}
-
 .small-side {
   display: flex;
   flex-direction: column;
@@ -807,21 +804,6 @@ section {
   height: 9000px;
 }
 
-#search-link {
-  width: 100%;
-
-  background-image: url(img/Search.svg);
-  background-repeat: no-repeat;
-  background-position: left center;
-
-  font-size: 1em;
-  background-color: inherit;
-  padding: 0 32px;
-  color: var(--grey-dark-color);
-
-  border: none;
-}
-
 @media (max-width: 1118px) {
   body {
     font-size: 12px;
@@ -858,8 +840,5 @@ section {
   .wide-side {
     height: 450px;
     order: 2;
-  }
-
-  #s2 {
   }
 }
