refactor : Change <div> tags to <ul><li> applied in card lists

--- a/Linkbrary/style.css
+++ b/Linkbrary/style.css
@@ -140,6 +140,12 @@ section {
   align-items: center;
 }
 
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
 /*====================================          CLASS           ==================================*/
 
 .add-favorite {
