--- a/Linkbrary/style.css
+++ b/Linkbrary/style.css
@@ -132,7 +132,6 @@ li {
   top: 5%;
   right: 5%;
   width: 20%;
-  height: auto;
 }
 .add-favorite img {
   width: 100%;
@@ -156,7 +155,7 @@ li {
   align-items: center;
   font-size: 1.125em;
   font-weight: 600;
-  color: var(--Grey-Light, #f5f5f5);
+  color: var(--grey-light-color);
   font-style: normal;
   line-height: normal;
   text-decoration-line: none;
