--- a/Linkbrary/style.css
+++ b/Linkbrary/style.css
@@ -32,6 +32,8 @@ body {
   flex-direction: column;
   align-items: center;
   min-width: 600px;
+  margin: 0;
+  padding: 0;
 }
 button {
   border: none;
