--- a/src/style.css
+++ b/src/style.css
@@ -356,6 +356,22 @@ input:focus {
     background: linear-gradient(to right, #6AE3FE, #6D6AFE);
 }
 
+.modal_delete_btn {
+    width: 100%;
+    height: 50px;
+    border-radius: 8px;
+    padding: 14px 20px;
+    border: none;
+    background: var(--red);
+    color: var(--white);
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.modal_delete_btn:hover:active{
+    border: 1px var(--red) solid;   
+}
+
 .share_modal_utils {
     display: flex;
     align-items: center;
