--- a/weekly_mission/css/index.css
+++ b/weekly_mission/css/index.css
@@ -1,11 +1,3 @@
-/* 버튼 설정 */
-button {
-	cursor: pointer;
-}
-
-/* End of: 버튼 설정 */
-
-/* End of: 단락 간 간격 없애기 */
 
 /* 텍스트 색상 설정 */
 .colored-text-1 {
@@ -110,6 +102,7 @@ button {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	text-decoration: none;
 }
 
 .landing-1-btn>.label {
