--- a/weekly_mission/css/nav.css
+++ b/weekly_mission/css/nav.css
@@ -39,11 +39,12 @@ button{
 	border-radius: 8px;
 	border-style: none;
 	gap: 10px;
-	background-image: linear-gradient(90deg,#6d6afe, #6ae3fe);
-	
+	background-image: linear-gradient(90deg,#6d6afe, #6ae3fe);	
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	
+	text-decoration-line: none;
 }
 
 .nav-login-label{
