--- a/Linkbrary/css/style.css
+++ b/Linkbrary/css/style.css
@@ -1,3 +1,4 @@
+@import url("/reset.css");
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 @import url("https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap");
 :root {
