--- a/Linkbrary/css/reset.css
+++ b/Linkbrary/css/reset.css
@@ -66,3 +66,16 @@ td,
 th {
   padding: 0;
 }
+
+button {
+  border: none;
+}
+
+div {
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  outline: none;
+}
