fix : set equal margin for signin and signup page

--- a/Linkbrary/css/sign-page-style.css
+++ b/Linkbrary/css/sign-page-style.css
@@ -67,10 +67,12 @@
 }
 
 .sign {
+  margin: 238px 0;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 30px;
 }
 
