--- a/weekly_mission/css/nav.css
+++ b/weekly_mission/css/nav.css
@@ -1,11 +1,4 @@
 
-
-
-
-button{
-	cursor: pointer;
-}
-
 .nav {
 	width: 100%;
 	height: 93px;
@@ -16,7 +9,7 @@ button{
 	z-index: 1;
 }
 
-.nav-container{
+.nav__contents{
 	width: 100%;
 	max-width: 1520px;
 	height: 53px;
@@ -26,13 +19,13 @@ button{
 }
 
 
-.nav-logo > img{
+.nav__logo > img{
 	max-width: 133px;
 	width: 100%;
 	height: 24px;
 }
 
-.nav-login_button{
+.nav__login-button{
 	max-width: 128px;
 	width: 100%;
 	height: 100%;
@@ -47,8 +40,8 @@ button{
 	text-decoration-line: none;
 }
 
-.nav-login-label{
-	font-size: min(3vw,18px);
+.nav__login-label{
+	font-size: min 18px;
 	font-weight: 600;
 	color: #f5f5f5;
 	font-family: 'Pretendard';
@@ -59,10 +52,10 @@ button{
 		height: 63px;
 		padding: 13px 32px 13px 32px;
 	}
-	.nav-container{
+	.nav__contents{
 		height: 37px;
 	}
-	.nav-logo > img{
+	.nav__logo > img{
 		max-width: 89px;
 		width: 100%;
 		height: 24px;
