--- a/weekly_mission/css/index.css
+++ b/weekly_mission/css/index.css
@@ -372,7 +372,7 @@
 		flex-direction: column;
 		align-items: flex-start;
 		justify-content: space-between;
-		height: 62px;
+		height: 100%;
 	}
 	.landing-section__text-area--medium{
 		width: 100%;
@@ -380,7 +380,7 @@
 		flex-direction: column;
 		align-items: flex-start;
 		justify-content: space-between;
-		height: 85px;
+		height: 100%;
 	}
 	.landing-section__text-area--large{
 		width: 100%;
@@ -388,7 +388,7 @@
 		flex-direction: column;
 		align-items: flex-start;
 		justify-content: space-between;
-		height: 85px;
+		height: 100%;
 	}
 
 	.landing-section__text--large {
@@ -438,6 +438,10 @@
 		height: 178.7px;
 	}
 	.landing-section__image {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		max-width: 325px;
 		width: 100%;
 		height: 265px;
