--- a/weekly_mission/css/auth.css
+++ b/weekly_mission/css/auth.css
@@ -105,7 +105,7 @@
 	width: 100%;
 	height: 24px;
 	font-weight: 400;
-	font-size: min(3vw, 14px);
+	font-size: 14px;
 	font-family: "Pretendard";
 	line-height: 24px;
 	letter-spacing: -1px;
@@ -115,7 +115,7 @@
 	width: 100%;
 	height: 19px;
 	font-weight: 600;
-	font-size: min(3vw, 15px);
+	font-size: 15px;
 	font-family: "Pretendard";
 	line-height: 19px;
 	color: #6D6AFE;
@@ -159,7 +159,7 @@
 
 .auth__label{
 	font-weight: 400;
-	font-size: min(3vw, 14px);
+	font-size: 14px;
 	font-family: "Pretendard";
 }
 
@@ -214,7 +214,7 @@
 	justify-content: center;
 }
 .auth__submit-button > p{
-	font-size: min(3vw, 18px);
+	font-size: 18px;
 	font-weight: 600;
 	color: #f5f5f5;
 	font-family: 'Pretendard';
