--- a/weekly_mission/css/nav.css
+++ b/weekly_mission/css/nav.css
@@ -41,7 +41,7 @@
 }
 
 .nav__login-label{
-	font-size: min 18px;
+	font-size: 18px;
 	font-weight: 600;
 	color: #f5f5f5;
 	font-family: 'Pretendard';
