--- a/weekly_mission/css/auth.css
+++ b/weekly_mission/css/auth.css
@@ -128,7 +128,7 @@
 .login-contents__input-form{
 	max-width: 400px;
 	width: 100%;
-	height: 202px;
+	height: 225px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -150,7 +150,7 @@
 .auth__input-entry{
 	max-width: 400px;
 	width: 100%;
-	height: 89px;
+	height: 112px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -169,6 +169,29 @@
 
 /* End of 입력 필드 디자인 */
 
+/* 에러메시지 디자인 */
+/* 입력필드 Wrapper: 폼의 입력 + 에러메시지 출력 영역 */
+.auth__input-wrapper{
+	max-width: 400px;
+	width: 100%;
+	height: 83px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-between;
+}
+
+/* 에러 메시지 디자인 */
+.error-message {
+    color: #FF5B56;
+    font-size: 14px;
+	font-weight: 400;
+	font-family: 'Pretendard';
+    height: 17px;
+}
+/* End of: 에러메시지 디자인 */
+
+
 /* 사용자 입력  */
 .input-binder{
 	width: 100%;
@@ -180,11 +203,17 @@
 	width: 100%;
 	height: 60px;
 	border-radius: 8px;
-	border: 1px solid #CCD5E3;
+	border: 1px solid ;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 24px;
 	padding: 18px 15px 18px 15px;
+}
+.auth__input-border--default{
+	border-color: #CCD5E3;
+}
+.auth__input-border--error{
+	border-color: #FF5B56;
 }
 
 .auth__input-field:focus{
@@ -236,7 +265,6 @@
 	justify-content: space-between;
 }
 /* End of: 소셜로그인 */
-
 
 /* Tablet용 페이지 크기 설정 */
 @media(max-width: 1199px){
