--- a/css/Linkbrary.css
+++ b/css/Linkbrary.css
@@ -56,19 +56,17 @@ header .login_btn {
   background: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
 }
 
-.container {
-  left: 0;
-  width: 100%;
-  align-items: center;
-}
-
 .section_1 {
+  display: flex;
+  position: relative;
+  flex-direction: column;
   background-color: #F0F6FF;
   width: 100%;
   height: 953px;
   align-items: center;
   text-align: center;
   padding: 16px 20px 16px 20px;
+  justify-content: space-between;
 }
 
 .section_1 h2 {
@@ -109,8 +107,11 @@ header .login_btn {
   cursor: pointer;
 }
 
-.link_search {
+.main_img {
   position: relative;
+  max-width: 1200px;
+  width: 1200px;
+  height: 590px;
   bottom: 66px;
 }
 
@@ -123,25 +124,25 @@ h3 {
   letter-spacing: -0.3px;
 }
 
-.section_2 h3 span {
+.colorname_1 {
   background: linear-gradient(to right, #FE8A8A, #A4CEFF);
   color: transparent;
   -webkit-background-clip: text;
 }
 
-.section_3 h3 span {
+.colorname_2 {
   background: linear-gradient(to right, #6FBAFF, #FFD88B);
   color: transparent;
   -webkit-background-clip: text;
 }
 
-.section_4 h3 span {
+.colorname_3 {
   background: linear-gradient(to right, #6D7CCD 100%, #528885 22%);
   color: transparent;
   -webkit-background-clip: text;
 }
 
-.section_5 h3 span {
+.colorname_4 {
   background: linear-gradient(to right, #FE578F, #68E8F9);
   color: transparent;
   -webkit-background-clip: text;
@@ -157,62 +158,77 @@ h3 {
   color: rgba(107, 107, 107, 1);
 }
 
-.section_2, .section_3,
-.section_4, .section_5 {
-  background-color: white;
+.section_2 {
   position: relative;
-  align-items: center;
-  text-align: left;
   width: 100%;
   height: 620px;
-  padding: 16px 20px 16px 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.section_2_text {
+  width: 310px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  justify-content: space-between;
+  height: 198px;
 }
 
 .middle {
+  max-width: 998px;
+  width: 100%;
+  height: 450px;
   position: absolute;
-  top: 50%;
+  top: 120px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 998px;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section_2_img {
+  max-width: 550px;
+  width: 550px;
   height: 450px;
 }
 
-.section_2 .text,
-.section_4 .text {
-  position: absolute;
-  display: block;
-  top: 50%;
+.section_common {
+  position: relative;
+  margin: 0;
+  width: 100%;
+  height: 550px;
+  display: flex;
+  justify-content: center;
+}
+
+.section_common_text {
   width: 320px;
-  height: 198px;
-  transform: translate(0, -50%);
-  margin-right: 128px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  display: flex;
+  height: 172px;
 }
 
-.section_2 .img,
-.section_4 .img {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  transform: translate(0, -50%);
-  right: 0;
+.section_3_img {
+  max-width: 550px;
+  width: 550px;
+  height: 450px;
 }
 
-.section_3 .img,
-.section_5 .img {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  transform: translate(0, -50%);
+.section_4_img {
+  max-width: 550px;
+  width: 550px;
+  height: 450px;
 }
 
-.section_3 .text,
-.section_5 .text {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  transform: translate(0, -50%);
-  width: 320px;
-  right: 0;
+.section_5_img {
+  max-width: 550px;
+  width: 550px;
+  height: 450px;
 }
 
 footer {
