--- a/css/signin.css
+++ b/css/signin.css
@@ -149,3 +149,25 @@ button {
   right: 5%;
   transform: translate(0%, -50%);
 }
+
+/* tablet */
+@media (min-width: 768px) and (max-width: 1199px) {
+  .main {
+      padding-top: 60px;
+  }
+
+  #eyeicon {
+    padding-top: 60px;
+  }
+}
+
+/* mobile */
+@media (min-width: 375px) and (max-width: 767px) {
+  .main {
+    padding-top: 60px;
+  }
+
+  #eyeicon {
+    padding-top: 60px;
+  }
+}
