--- a/Linkbrary/css/style.css
+++ b/Linkbrary/css/style.css
@@ -42,6 +42,9 @@ button:focus {
   filter: brightness(1.2);
   scale: 1.02;
 }
+div {
+  display: flex;
+}
 
 em {
   font-style: normal;
@@ -426,6 +429,33 @@ section {
   line-height: normal;
 }
 
+.page-sample-content {
+  padding: 20px 10%;
+  max-width: 1118px;
+  width: 100%;
+  aspect-ratio: 1118/659;
+  border-radius: 25px;
+  border-radius: 25px;
+  background: var(--white-color);
+  z-index: -1;
+  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
+  flex-direction: column;
+  flex-grow: 1;
+  gap: 20px;
+}
+
+.page-sample-section {
+  background-color: inherit;
+  padding: 50px 18.75%;
+  background-image: url("/img/_dim.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  max-width: 1920px;
+  width: 100vw;
+  height: 953px;
+  overflow: hidden;
+}
+
 .policy-bar {
   display: flex;
   gap: 30px;
@@ -592,37 +622,6 @@ section {
 #link-add {
   margin-top: 40px;
   width: 350px;
-}
-
-#content1 {
-  padding: 20px 10%;
-  margin: 0 auto;
-  width: 1118px;
-  height: 659px;
-  border-radius: 25px;
-  border-radius: 25px;
-  background: var(--white-color);
-  z-index: -1;
-  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-#content2 {
-  display: flex;
-}
-
-#page-sample-section {
-  background-color: inherit;
-  padding: 50px 0px;
-  background-image: url("/img/_dim.png");
-  background-repeat: no-repeat;
-  background-position: top center;
-  max-width: 1920px;
-  width: 100vw;
-  height: 953px;
-  overflow: hidden;
 }
 
 #feature-description-section {
