--- a/styles/color.css
+++ b/styles/color.css
@@ -5,6 +5,7 @@
   --Linkbrary-white: #ffffff;
   --Linkbrary-gray100: #373740;
   --Linkbrary-gray60: #9fa6b2;
+  --Linkbrary-gray20: #ccd5e3;
   --Linkbrary-gray10: #e7effb;
   --Linkbrary-bg: #f0f6ff;
 }
