--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,16 @@
 @import "./global.css";
 
 @font-face {
-  font-family: Acme;
+  font-family: Acme-Regular;
   src: url("fonts/Acme-Regular.ttf");
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+
+.acme-regular {
+  font-family: "Acme", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* nav 영역 */
@@ -63,13 +71,20 @@ header {
   width: 111.8rem;
   height: 65.9rem;
 }
-/* header-title, header-title-gradient 수정 예정 */
+
+.header-contents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+  margin-top: 7rem;
+}
+
 .header-title {
-  margin: 0;
   text-align: center;
   font-size: 6.4rem;
   font-weight: 700;
-  line-height: 80px;
+  line-height: 8rem;
 }
 
 .header-title-gradient {
@@ -83,8 +98,18 @@ header {
   color: transparent;
 }
 
+/* main 안에 section 영역 */
+main {
+  padding-top: 7rem;
+  padding-bottom: 12rem;
+}
+
 section {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 15.7rem;
+  padding: 50px 0;
 }
 
 .contents-img {
@@ -92,133 +117,73 @@ section {
   height: 45rem;
 }
 
-.section-nav > img,
-a {
-  cursor: pointer;
-}
-
-.section-nav {
-  display: flex;
-  padding: 20px 200px;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-.contents-01 {
+.description {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 70px 360px 0;
-  margin: 90px 0 0 0;
-}
-
-.description h1 {
-  margin: 0;
-  font-size: 48px;
+  justify-content: center;
+  gap: 1rem;
   font-weight: 700;
   line-height: normal;
 }
 
-.description-storage {
-  background: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
-.description-manage {
-  background: linear-gradient(277deg, #6fbaff 59.22%, #ffd88b 93.66%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
-.description-share {
-  background: linear-gradient(
-    99deg,
-    #6d7ccd 19.76%,
-    rgba(82, 136, 133, 0.22) 52.69%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
-.description-search {
-  background: linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
+.description h2 {
+  margin: 0;
+  font-size: 4.8rem;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .description p {
   display: flex;
   margin: 0;
-  display: inline-block;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
-  line-height: 150%; /* 24px */
+  line-height: 150%;
   color: #6b6b6b;
 }
 
-.card.padding {
-  padding: 120px 461px 50px;
+.background-clip {
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
-.card {
-  display: flex;
-  max-width: 1920px;
-  min-width: 1280px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 50px 461px;
-  gap: 157px;
+.gradient-01 {
+  background-image: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
 }
 
-.description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: normal;
+.gradient-02 {
+  background-image: linear-gradient(277deg, #6fbaff 59.22%, #ffd88b 93.66%);
 }
 
-.img-wrap {
-  background-color: var(--Linkbrary-bg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-  border-radius: 8px;
+.gradient-03 {
+  background-image: linear-gradient(
+    99deg,
+    #6d7ccd 19.76%,
+    rgba(82, 136, 133, 0.22) 52.69%
+  );
 }
 
+.gradient-04 {
+  background-image: linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%);
+}
+
+/* footer 영역 */
 .footer-wrap {
   display: flex;
-  height: 160px;
-  margin-top: 120px;
-  padding: 32px 104px 64px;
+  width: 100%;
+  height: 16rem;
+  padding: 3.2rem 10.4rem 6.4rem;
   justify-content: space-between;
   align-items: center;
   background-color: var(--The-julge-black);
 }
 
-.img-wrap.bg {
-  background-image: url("img/contents-01.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.corporate {
+.copyright {
   color: #676767;
   text-align: center;
   font-family: Acme;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: normal;
 }
@@ -226,21 +191,21 @@ a {
 .footer-link {
   display: flex;
   justify-content: space-between;
-  gap: 30px;
+  gap: 3rem;
 }
 
 .footer-link-logo {
   display: flex;
   justify-content: space-between;
-  gap: 12px;
+  gap: 1.2rem;
 }
 
 .footer-link > a {
   text-decoration: none;
   color: #cfcfcf;
-  font-family: Acme;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  font-family: "Acme", sans-serif;
 }
