--- a/styles/reset.css
+++ b/styles/reset.css
@@ -10,3 +10,16 @@ html,
 body {
   font-size: 62.5%;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  border: none;
+  padding: unset;
+  background-color: unset;
+  cursor: pointer;
+}
