Feat: Add order to image and description in section of mobile size

--- a/3rd_week_mission/src/landing.css
+++ b/3rd_week_mission/src/landing.css
@@ -299,6 +299,7 @@ footer {
     height: 100%;
     object-fit: fill;
     margin-top:1.4rem;
+    order: 2;
   }
 
   .title {
@@ -308,6 +309,7 @@ footer {
 
   .description {
     font-size: 1.5rem;
+    order: 3;
   }
 
   .slogan {
