Fix: Modify min-width of Mobile media query

--- a/3rd_week_mission/src/landing.css
+++ b/3rd_week_mission/src/landing.css
@@ -259,7 +259,7 @@ footer {
 
 /*모바일 환경*/
 
-@media (min-width: 375px) and (max-width: 767px) {
+@media (max-width: 767px) {
   body {
     display: flex;
     flex-direction: column;
