--- a/Linkbrary/css/style.css
+++ b/Linkbrary/css/style.css
@@ -78,7 +78,7 @@ header {
   position: sticky;
   top: 0;
   display: flex;
-  padding: 20px 5%;
+  padding: 20px 200px;
   justify-content: space-between;
   align-items: center;
   background-color: inherit;
@@ -435,6 +435,13 @@ section {
   line-height: normal;
 }
 
+.page-sample {
+  position: relative;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
 .page-sample-content {
   position: relative;
   padding: 20px 10%;
@@ -635,8 +642,8 @@ section {
 }
 
 @media (max-width: 1199px) {
-  body {
-    font-size: 12px;
+  .top-heading {
+    width: auto;
   }
 
   .container {
