--- a/main.style.css
+++ b/main.style.css
@@ -4,7 +4,7 @@
 a {
   text-decoration: none;
 }
-nav {
+.nav {
   width: 100%;
   height: 93px;
   padding: 20px 200px 20px 200px;
@@ -13,16 +13,16 @@ nav {
   top: 0;
   z-index: 1;
 }
-.bar {
+.nav__bar {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.header-logo {
+.logo {
   width: 133px;
   height: 24px;
 }
-.login {
+.login__link {
   background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
   border-radius: 8px;
   color: #f5f5f5;
@@ -39,7 +39,7 @@ nav {
   height: 953px;
   overflow: hidden;
 }
-.main-description {
+.main__description {
   font-family: Pretendard;
   font-size: 64px;
   font-weight: 700;
@@ -47,16 +47,16 @@ nav {
   letter-spacing: 0px;
   text-align: center;
 }
-.text-gradient {
+.main--gradient {
   background: linear-gradient(91.26deg, #6d6afe 17.28%, #ff9f9f 74.98%);
   color: transparent;
   background-clip: text;
 }
-.signUp {
+.signup {
   display: flex;
   justify-content: center;
 }
-.addLink {
+.signup__link {
   margin: 24px;
   background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
   color: #f5f5f5;
@@ -72,11 +72,11 @@ nav {
   font-size: 18px;
   font-weight: 600;
 }
-.header-img-section {
+.main__img-section {
   display: flex;
   justify-content: center;
 }
-.header-img {
+.main-img {
   width: 1118px;
   height: 659px;
   top: 50px;
@@ -93,7 +93,7 @@ nav {
 .section.save {
   grid-template-areas: "des img";
 }
-.save-description {
+.save__description {
   grid-area: des;
   display: flex;
   flex-direction: column;
@@ -106,12 +106,12 @@ h2 {
   letter-spacing: 0px;
   text-align: left;
 }
-.link-gradient {
+.save--gradient {
   background: linear-gradient(95.63deg, #fe8a8a 1.72%, #a4ceff 74.97%);
   color: transparent;
   background-clip: text;
 }
-.save-img {
+.save__img {
   grid-area: img;
   width: 550px;
   height: 450px;
@@ -128,24 +128,20 @@ h2 {
   margin-top: -20px;
   color: rgba(107, 107, 107, 1);
 }
-/* .section.manage {
-  display: grid;
-  grid-template: 1fr/2fr;
-  grid-template-areas: "img des";
-} */
-.manage-image {
+
+.manage__image {
   width: 550px;
   height: 450px;
   padding: 114px, 68px, 66px, 68px;
   border-radius: 15px;
   grid-area: img;
 }
-.manage-gradient {
+.manage--gradient {
   background: linear-gradient(277.01deg, #6fbaff 59.22%, #ffd88b 93.66%);
   color: transparent;
   background-clip: text;
 }
-.manage-description {
+.manage__description {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -154,7 +150,7 @@ h2 {
 .section.share {
   grid-template-areas: "des img";
 }
-.share-gradient {
+.share--gradient {
   background: linear-gradient(
     99.5deg,
     #6d7ccd 19.76%,
@@ -163,13 +159,13 @@ h2 {
   color: transparent;
   background-clip: text;
 }
-.share-description {
+.share__description {
   display: flex;
   flex-direction: column;
   justify-content: center;
   grid-area: des;
 }
-.share-img {
+.share__img {
   width: 570px;
   height: 450px;
   top: -9px;
@@ -177,23 +173,21 @@ h2 {
   border-radius: 25px;
   grid-area: img;
 }
-.section.search {
-  grid-template-areas: "img des";
-}
-.search-img {
+
+.search__img {
   width: 550px;
   height: 450px;
   border-radius: 15px;
   grid-area: img;
 }
 
-.search-description {
+.search__description {
   display: flex;
   flex-direction: column;
   justify-content: center;
   grid-area: des;
 }
-.search-gradient {
+.search--gradient {
   background: linear-gradient(271.36deg, #fe578f -9.84%, #68e8f9 107.18%);
   color: transparent;
   background-clip: text;
