refactor : change style in top heading

--- a/Linkbrary/css/index-mobile.css
+++ b/Linkbrary/css/index-mobile.css
@@ -4,8 +4,13 @@
   }
 
   .top-heading {
-    width: 72%;
+    width: 100%;
     font-size: 3em;
+    line-height: 1.3em;
+  }
+
+  .link-add {
+    width: 60%;
   }
 
   .page-sample-section {
