--- a/Linkbrary/css/index-mobile.css
+++ b/Linkbrary/css/index-mobile.css
@@ -20,6 +20,17 @@
     font-size: 24px;
   }
 
+  .footer-bar {
+    display: grid;
+    grid-template-columns: 181px 116px;
+    column-gap: auto;
+    row-gap: 60px;
+    padding: 32px;
+  }
+  .copyright {
+    order: 1;
+  }
+
   .top-heading {
     width: 100%;
     font-size: 2em;
