--- a/Linkbrary/css/style.css
+++ b/Linkbrary/css/style.css
@@ -478,7 +478,7 @@ section {
 .page-sample-section {
   position: relative;
   background-color: inherit;
-  padding: 50px 0 0;
+  padding-top: 70px;
   overflow: hidden;
   gap: 40px;
 }
@@ -630,7 +630,6 @@ section {
 }
 
 .top-heading {
-  margin-top: 70px;
   color: #000;
   font-size: 4em;
   font-style: normal;
