refactor : Split global tablet mobile styles to new global stylesheets

--- a/Linkbrary/css/style.css
+++ b/Linkbrary/css/style.css
@@ -133,7 +133,7 @@ section {
     var(--primary-color),
     var(--skyblue-color)
   );
-  padding: 0;
+  padding: 16px;
   border-radius: 8px;
   display: flex;
   justify-content: center;
