--- a/Linkbrary/css/sign-page-style.css
+++ b/Linkbrary/css/sign-page-style.css
@@ -67,7 +67,7 @@
 }
 
 .sign {
-  margin: 238px 0;
+  padding: 238px 0;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -119,4 +119,15 @@
   font-weight: 600;
   color: var(--primary-color);
   text-decoration-line: underline;
+}
+
+.social-links {
+  display: flex;
+  gap: 16px;
+}
+
+@media (max-width: 767px) {
+  .sign {
+    padding: 120px 32px;
+  }
 }
